# examples

1/coredump/: doc.txt
1/lib_demo/: calc.c
1/socket_demo/: Makefile  tcp_client.c  tcp_server.c
Qt/demo-1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Qt/demo-2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Qt/test/test/: CMakeLists.txt  main.cpp
X11/dpms-ctrl/: dpms-ctrl.c  readme.md
X11/libinput/: example-0  example-0.c  readme.md
X11/opengl/: readme.md  test.cpp
X11/xcb/example-0/: readme.md  xcb  xcb.c
X11/xcb/example-1/: exampe-1  exampe-1.c  readme.md
X11/xcb/example-10/: example-10  example-10.c  readme.md
X11/xcb/example-2/: example-2  example-2.c  readme.md
X11/xcb/example-3/: example-3  readme.md
X11/xcb/example-4/: example-4  example-4.c  readme.md
X11/xcb/example-5/: example-5  example-5.c  readme.md
X11/xcb/example-6/: example-6  readme.md
X11/xcb/example-7/: example-7  example-7.c  readme.md
X11/xcb/example-8/: example-8.c  readme.md
X11/xcb/example-9/: example-9  example-9.c  readme.md
X11/xclient/: readme.md  xclient  xclient.c
dbus/gdbus/: Building.xml  Makefile  gdbus_client.c  gdbus_server.c
dbus/libdbus/: Makefile  common.c  common.h  dbus-client.c  dbus-server.c  recv-signal.c
dbus/qDbus/: CMakeLists.txt
dbus/qDbus/client/: CMakeLists.txt  main.cpp
dbus/qDbus/server/: CMakeLists.txt  main.cpp  qdbus_server.cpp  qdbus_server.h
dbus/qDbus/server/data/: com.deepin.qdbusserver.conf
dbus/sd-bus/: Makefile  bus-client.c
elf/code/: Makefile  elf_handle.c  elf_handle.h  elf_test.c
elf/doc/: Elf文件介绍.docx
graphic-driver/devdrm/: Makefile  readme.md
graphic-driver/frambuffer/: framebuffer  framebuffer.c
graphic-driver/gltest/: CMakeLists.txt  gltestwidget.cpp  gltestwindow.cpp  gltestwindow.h  main.cpp
graphic-driver/gltest/buid/: CMakeCache.txt  Makefile  cmake_install.cmake  gltest
graphic-driver/gltest/buid/gltest_autogen/: moc_predefs.h  mocs_compilation.cpp
graphic-driver/gltest/buid/gltest_autogen/EWIEGA46WW/: moc_gltestwidget.cpp  moc_gltestwindow.cpp
ldd3/hello/: Makefile  hello.c
libedev/: example  readme.md
libinput/: readme.md
opengl/learn-opengl/: glxdemo  glxdemo.c
opengl/mesa-utils/: ReadMe.md
opengl/mesa-utils/gltest/: glxdemo.c
opengl/mesa-utils/glxgears/: test
other/coredump/: Makefile  doc.txt  test.c
other/lib_demo/: calc.h  doc  main.c
pciaccess/: example  example.c
sd-bus/: bus-service.c
stm32/: fifo.h
udev/: example-1.c  example-2.c  example-3  readme.md
